--- a/Code/capproject.ipynb
+++ b/Code/capproject.ipynb
@@ -38,17 +38,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#average backgorund valueyu bulan function\n",
+    "#average background valueyu bulan function\n",
     "def calc_accum_avg(frame,accumulated_weight):\n",
     "    \n",
-    "    global background #None olarak başlıhyor\n",
+    "    global background #None olarak başlıyor\n",
     "    \n",
-    "    if background is None: #gelen frami buraya passlıyacak\n",
+    "    if background is None: #gelen frame buraya passlıyacak\n",
     "        background = frame.copy().astype('float')\n",
     "        return None\n",
     "    \n",
     "    #None değilse değeri varsa yapılacak else\n",
-    "    cv2.accumulateWeighted(frame,background,accumulated_weight) #çalışan ortalama fram değerine biriktiriyor\n",
+    "    cv2.accumulateWeighted(frame,background,accumulated_weight) #çalışan ortalama frame değerine biriktiriyor\n",
     "    \n",
     "    #bu ağırlığı returnlemiyoruz global arka plana etki ediyor"
    ]
